test/rebar_edoc_SUITE_data/bad/apps/bad_foo/src/bad_foo.app.src
{application, bad_foo,
 [{description, "An OTP application"},
  {vsn, "0.1.0"},
  {registered, []},
  {mod, { bad_foo_app, []}},
  {applications,
   [kernel,
    stdlib,
    bad_bar1,
    bad_bar2
   ]},
  {env,[]},
  {modules, []},

  {maintainers, []},
  {licenses, []},
  {links, []}
 ]}.
